[project]
name = "llm-finetune-conversation-summary-lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.7",
    "loralib>=0.1.2",
    "peft>=0.17.1",
    "rouge-score>=0.1.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchdata>=0.11.0",
    "transformers>=4.57.0",
]
